--- a/src/modules/markdown-editor/MarkdownEditor.module.scss
+++ b/src/modules/markdown-editor/MarkdownEditor.module.scss
@@ -1,3 +1,12 @@
 .Paragraph {
   background-color: tomato;
 }
+
+.Table {
+  background-color: seagreen;
+
+  & th,
+  & td {
+    padding: 0.25rem 0.5rem;
+  }
+}
